--- a/base_express_js_project/package.json
+++ b/base_express_js_project/package.json
@@ -4,8 +4,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node server.js",
-        "dev": "nodemon server.js"
+        "start": "node ./src/server.js",
+        "dev": "nodemon ./src/server.js"
     },
     "keywords": [],
     "author": "",
@@ -25,11 +25,11 @@
         "sequelize-cli": "^6.6.2"
     },
     "_moduleAliases": {
-        "@utils": "./utils",
-        "@config": "./config/",
-        "@database/v1": "./api/v1/database",
-        "@controllers/v1": "./api/v1/controllers",
-        "@services/v1": "./api/v1/services/",
-        "@app": "./app.js"
+        "@utils": "./src/utils",
+        "@config": "./src/config/",
+        "@database/v1": "./src/api/v1/database",
+        "@controllers/v1": "./src/api/v1/controllers",
+        "@services/v1": "./src/api/v1/services/",
+        "@app": "./src/app.js"
     }
 }
